tests/spec/emit/snapshots/break_in_guarded_match_in_loop.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn find_first_negative(items: Slice<int>) -> int {
    let mut result = 0
    for item in items {
      match item {
        n if n < 0 => { result = n; break },
        _ => (),
      }
    }
    result
  }
---
package main

func findFirstNegative(items []int) int {
	result := 0
loop_1:
	for _, item := range items {
	match_1:
		for {
			{
				n := item
				if n < 0 {
					result = n
					break loop_1
				}
			}
			{
				break match_1
			}
		}
	}
	return result
}
