tests/spec/emit/snapshots/break_in_match_as_expression_no_value.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    let mut i = 0;
    while i < 100 {
      let v = match i >= 5 {
        true => break,
        false => i,
      };
      let _ = v;
      i += 1;
    }
  }
---
package main

func test() {
	i := 0
	for i < 100 {
		var v int
		if i >= 5 {
			break
		}
		v = i
		_ = v
		i++
	}
}
