tests/spec/emit/snapshots/break_value_in_if_branch_assignment_rhs.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    let _ = loop {
      let mut x = 0
      x = if true { break 1 } else { 1 }
      let _ = x
      2
    }
  }
---
package main

func test() {
	var tmp int
	for {
		x := 0
		var tmp_1 int
		if true {
			tmp = 1
			break
		}
		tmp_1 = 1
		x = tmp_1
		_ = x
	}
	_ = tmp
}
