tests/spec/emit/snapshots/break_value_in_if_branch_of_loop_expr.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    let _ = loop {
      let _ = if true { break 1 } else { 1 }
      2
    }
  }
---
package main

func test() {
	var tmp int
	for {
		var tmp_1 int
		if true {
			tmp = 1
			break
		}
		tmp_1 = 1
		_ = tmp_1
	}
	_ = tmp
}
