tests/spec/emit/snapshots/break_value_in_match_as_expression_in_loop.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let mut n = 0;
    loop {
      n = match n {
        5 => break n,
        _ => n + 1,
      }
    }
  }
---
package main

func test() int {
	n := 0
	var tmp int
	for {
		var tmp_1 int
		if n == 5 {
			tmp = n
			break
		}
		tmp_1 = n + 1
		n = tmp_1
	}
	return tmp
}
