tests/spec/emit/snapshots/break_value_in_match_branch_assignment_rhs.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    let _ = loop {
      let mut x = 0
      x = match 1 { 1 => break 1, _ => 1, }
      let _ = x
      2
    }
  }
---
package main

func test() {
	var tmp int
	for {
		x := 0
		var tmp_1 int
		if 1 == 1 {
			tmp = 1
			break
		}
		tmp_1 = 1
		x = tmp_1
		_ = x
	}
	_ = tmp
}
