tests/spec/emit/snapshots/breakless_loop_tail_omits_unreachable_panic.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn serve(n: int) -> int {
    loop {
      if n > 0 {
        return n
      }
    }
  }
---
package main

func serve(n int) int {
	for {
		if n > 0 {
			return n
		}
	}
}
