tests/spec/emit/snapshots/buffered_channel.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() -> Channel<int> {
    Channel.buffered<int>(10)
  }
---
package main

func test() chan int {
	return make(chan int, 10)
}
