tests/spec/emit/snapshots/buffered_channel_inferred_type.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() -> Channel<string> {
    Channel.buffered(5)
  }
---
package main

func test() chan string {
	return make(chan string, 5)
}
