tests/spec/emit/snapshots/builtin_comparable_bound_lowers_to_go_comparable.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn id<T: Comparable>(x: T) -> T {
    x
  }
  
  fn main() {
    let _ = id(1)
  }
---
package main

func id[T comparable](x T) T {
	return x
}

func main() {
	id(1)
}
